[package]
name = "how_many_days_until"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/LetsMelon/how_many_days_until"
homepage = "https://github.com/LetsMelon/how_many_days_until"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = "4.1.9"
computus = "1.0.0"
